WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 151550
Modern IDB: When a transaction is aborted, call onerror handlers for all in-progress requests
https://bugs.webkit.org/show_bug.cgi?id=151550
Summary
Modern IDB: When a transaction is aborted, call onerror handlers for all in-p...
Brady Eidson
Reported
2015-11-22 10:49:32 PST
Modern IDB: When a transaction is aborted, call onerror handlers for all in-progress requests
Attachments
Patch v1
(28.33 KB, patch)
2015-11-22 11:44 PST
,
Brady Eidson
achristensen
: review+
achristensen
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(28.37 KB, patch)
2015-11-23 11:04 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-11-22 11:44:46 PST
Created
attachment 266061
[details]
Patch v1
Alex Christensen
Comment 2
2015-11-23 10:49:06 PST
Comment on
attachment 266061
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=266061&action=review
r=me except one comment.
> Source/WebCore/Modules/indexeddb/shared/IDBError.cpp:117 > + static NeverDestroyed<String> entry = ASCIILiteral("Real description for abort");
This looks like you meant to get to this before uploading the patch. This tells me the error descriptions aren't checked in the tests. Will this be covered in
https://bugs.webkit.org/show_bug.cgi?id=150402
Brady Eidson
Comment 3
2015-11-23 10:55:11 PST
(In reply to
comment #2
)
> Comment on
attachment 266061
[details]
> Patch v1 > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=266061&action=review
> > r=me except one comment. > > > Source/WebCore/Modules/indexeddb/shared/IDBError.cpp:117 > > + static NeverDestroyed<String> entry = ASCIILiteral("Real description for abort"); > > This looks like you meant to get to this before uploading the patch.
Indeed! Yikes, and LOL.
> This tells me the error descriptions aren't checked in the tests. Will this be > covered in
https://bugs.webkit.org/show_bug.cgi?id=150402
Yup! 150402 will basically be a task that greps through the entire set of -expectations.txt to make sure each error desc shows up at least once, but 150882 is a pre-requisite for that. Coincidentally, 150882 is what I'm trying to work on over the next couple of days.
Brady Eidson
Comment 4
2015-11-23 11:04:15 PST
Created
attachment 266091
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2015-11-23 11:48:57 PST
Comment on
attachment 266091
[details]
Patch for landing Clearing flags on attachment: 266091 Committed
r192749
: <
http://trac.webkit.org/changeset/192749
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug